# ldpdonza-management

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: black.yml  code-qa.yml  django.yml  djlint.yml  flake8.yml  isort.yml  test_betalingen.yml  test_ploeglid.yml
.run/: manage.run.xml
config/: my.cnf
config/fixtures/: fixture_1.json
docs/: betalingen.md  deployment.md
donza/: asgi.py  manage.py  urls.py  wsgi.py
donza/donza/: asgi.py  settings.py  urls.py  wsgi.py
donza/management/: admin.py  components.py  filters.py  forms.py  ledenbeheer.py  models.py  resources.py  tables.py  urls.py  views.py
donza/settings/: __init__.py  base.py  common.py  local-copy.py  local.py  production.py  test.py
management/: admin.py  context_processors.py  models.py  resources.py  urls.py  utils.py  views.py
management/mail/: group_mail.py  send_mail.py
management/main/: betalingen.py  ledenbeheer.py
management/migrations/: 0001_initial.py  0002_auto_20200405_0855.py  0003_auto_20200407_0228.py  0004_auto_20200411_1058.py  0005_lid_sportief_lid.py  0006_auto_20200411_1646.py  0007_auto_20200503_1547.py  0008_auto_20200503_1548.py  0009_auto_20200503_1618.py  0010_auto_20200503_1732.py  0011_auto_20200509_2232.py  0012_ploeg_geslacht.py  0013_auto_20200511_1646.py  0014_auto_20200517_1957.py  0015_auto_20200521_2001.py  0016_betaling_aflossingen.py  0017_auto_20201019_1952.py  0018_auto_20210120_1059.py  0019_lid_actief_lid.py  0020_alter_lid_familieleden.py
scripts/: lidgeld.py
(+108 files in other folders)
