[tool.poetry]
name = "ldpdonza-management"
version = "0.1.0"
description = "LDP Donza internal management tool"
authors = ["Tim Van Erum <vanerum.tim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-guardian = "^2.4.0"
django-import-export = "^3.0.1"
django-phonenumber-field = "^7.0.0"
django-filter = "^22.1"
django-tables2 = "^2.4.1"
django-bootstrap-modal-forms = "^2.2.0"
django-localflavor = "^3.1"
django-bulma = "^0.8.3"
pymysql = "^1.0.2"
django-extensions = "^3.2.1"
django-phonenumbers = "^1.0.1"
weasyprint = "~56"
chardet = "^5.0.0"
cryptography = "^38.0.1"
django-glrm = "^1.1.3"
django-bootstrap4 = "^22.2"
pandas = "^1.5.1"


[tool.poetry.group.dev.dependencies]
flake8 = "~5"
isort = "^5.10.1"
black = "^22.10.0"
docformatter = "^1.5.0"
djlint = "^1.19.3"
coverage = "^7.0.0"
pre-commit = "^2.21.0"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.djlint]
profile="django"
max_line_length=120
format_attribute_template_tags=true
max_attribute_length=10
format_js=true
format_css=true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
